--- a/package.json
+++ b/package.json
@@ -10,13 +10,22 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-masked-view/masked-view": "^0.3.2",
     "@react-native/new-app-screen": "0.80.1",
+    "@react-navigation/bottom-tabs": "^7.4.2",
+    "@react-navigation/drawer": "^7.5.2",
+    "@react-navigation/native": "^7.1.14",
     "react": "19.1.0",
     "react-native": "0.80.1",
+    "react-native-camera-kit": "^15.1.0",
     "react-native-fs": "^2.20.0",
+    "react-native-gesture-handler": "^2.27.1",
     "react-native-loader-kit": "^3.0.0",
     "react-native-paper": "^5.14.5",
-    "react-native-safe-area-context": "^5.5.0",
+    "react-native-permissions": "^5.4.1",
+    "react-native-reanimated": "^3.18.0",
+    "react-native-safe-area-context": "^5.5.1",
+    "react-native-screens": "^4.11.1",
     "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
