--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
     <uses-permission android:name="android.permission.CAMERA" />
   <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE"
     tools:ignore="ScopedStorage" />
-
+<uses-permission android:name="android.permission.VIBRATE"/>
     <application
       android:name=".MainApplication"
       android:label="@string/app_name"
